--- a/predint-odissei.qmd
+++ b/predint-odissei.qmd
@@ -1,15 +1,127 @@
 ---
-title: "Habits"
-author: "John Doe"
-format: revealjs
+title: "Prediction intervals with missing data"
+subtitle: "Department of Methodology and Statistics, Utrecht University"
+author:
+  - name: "Thom B. Volker"
+  - name: "Florian D. van Leeuwen"
+  - name: "Stef van Buuren"
+format:
+  revealjs:
+    logo: "universiteit-utrecht-logo.png"   
+    logo-position: top-right
+    incremental: true
+bibliography: pred_int.bib
 ---
 
-## Getting up
+## Uncertainity quantification (UQ)
 
-- Turn off alarm
-- Get out of bed
+::: {.incremental}
+-   UQ is important in prediction settings
+-   e.g., when a package gets delivered the range of plausible values is more important than the prediction itself
+-   This range is often expressed as the prediction interval
+:::
 
-## Going to sleep
+## Missing data 
 
-- Get in bed
-- Count sheep
+::: {.incremental}
+-   Missing data complicates the story (MCAR, MAR, MNAR)
+-   Modeling choices have to be made: Complete case analysis or Imputation
+-   Imputation can further be divided in single (deterministic) and multiple (stochastic) imputation
+-   It is well know that SI is not valid for inference tasks [@van_buuren_flexible_2018]
+-   For prediction the point estimate can be unbiased with SI [@little_regression_1992], but the UQ is not valid [@zaffran_predictive_2024] 
+:::
+
+
+## Setup 
+::: {style="font-size: 0.75em;"}
+::: {.incremental}
+- X values are generated for a Multivariate normal distribution
+- Y values are created based on a linear model with X
+- Missing data is induced in X following a MAR mechanism
+- The following pattern is used: 
+:::
+::: {.fragment }
+![](Figures/pattern.png){width=55%}
+:::
+::: {.incremental}
+- For SI Y is not in the imputation model, for MI it is 
+:::
+:::
+
+## Prediction interval for OLS
+
+::: {.fragment }
+$$
+y \pm t_{\alpha/2, n-p}\sqrt{\sigma^2(x^T(X^TX)^{-1}x)}
+$$
+:::
+
+::: {.fragment }
+with $\sigma^2$ = residual variance, $x^T(X^TX)^{-1}x$ = place of x wrt X
+:::
+
+::: {.fragment }
+- Now we have multiple prediction intervals, which can be combined with Rubin's rules:
+:::
+
+::: {.fragment }
+$$ T =  \bar{U} + B + \frac{B}{m}$$
+:::
+
+::: {.fragment }
+with $\bar{U}$ = the within variance, $B$ = the between varience, and $m$ the number of imputations
+:::
+
+## Pooling the prediction intervals
+
+::: {.fragment }
+Let's define the terms:
+$$
+ \bar{U} = \frac{1}{M} \sum_{m =1}^M  \sqrt{ \sigma_m^2 * (1 + x^T_{m}(X_m^TX_m)^{-1}x_{m})}
+$$
+:::
+
+::: {.fragment }
+$$
+ \bar{Q} = \frac{1}{M} \sum_{m =1}^M \hat{y_{m}}
+$$
+:::
+
+::: {.fragment }
+$$
+B =  \frac{1}{M} \sum_{m =1}^M (\hat{y_{m}} - \bar{Q})^2
+$$
+:::
+
+## Results
+- A valid prediction interval should have 1-alpha coverage
+
+:::: {.columns}
+
+::: {.column width="50%"}
+::: {.fragment}
+![](Figures/ODISSEI_1.png){width=100%}
+:::
+:::
+
+::: {.column width="50%"}
+::: {.fragment}
+![](Figures/ODISSEI_2.png){width=100%}
+:::
+:::
+
+::::
+
+- The width of the prediction interval can show scale with the uncertainity in X
+
+## Takeaway
+::: {.incremental}
+- Other solutions are available using conformal prediction [@zaffran_predictive_2024, @zaffran_conformal_2023], but they only work for MCAR data and if the sample size is large
+- Our solution is implemented in the `mice` package as the *predict_mi* function
+- More research is needed to test our method beyond OLS
+:::
+## References
+
+::: {#refs}
+
+:::
