--- a/pred_int.bib
+++ b/pred_int.bib
@@ -1,4 +1,16 @@
 
+@article{barnard_rubin_1999,
+    author = {Barnard, J and Rubin, DB},
+    title = {Small-sample degrees of freedom with multiple imputation},
+    journal = {Biometrika},
+    volume = {86},
+    number = {4},
+    pages = {948-955},
+    year = {1999},
+    month = {12},
+    doi = {10.1093/biomet/86.4.948},
+}
+
 @article{neter_applied_1996,
 	title = {Applied linear statistical models},
 	url = {https://mubert.marshall.edu/bert/syllabi/310720160114404301635160.pdf},
